// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BulkActions > With actions > should render correctly 1`] = `
<div>
  <div
    class="HvBulkActions-root css-ac2ydt-StyledRoot e1nka4cc3"
  >
    <div
      class="HvBulkActions-selectAllContainer css-1hp2uh2-StyledSelectAllContainer e1nka4cc2"
    >
      <div
        class="HvBulkActions-selectAll HvCheckBox-root css-1lst77x-StyledFormElement ezlsftu3 HvFormElement-root"
      >
        <div
          class="HvCheckBox-container css-13jbcv2-StyledLabelContainer ezlsftu2"
        >
          <span
            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorDefault MuiCheckbox-root MuiCheckbox-colorDefault HvCheckBox-checkbox ezlsftu0 HvBaseCheckBox-root css-1r9xpm8-StyledCheckedBox-StyledBaseCheckBox edk6te40 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              id="hvcheckbox14-input"
              type="checkbox"
              value="on"
            />
            <div
              class="HvBaseCheckBox-icon css-f95wjz"
              font-size="medium"
              name="Checkbox"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 0h16v16H0z"
                  fill="var(--uikit-colors-atmo1)"
                />
                <path
                  class="color1"
                  d="M16 16H0V0h16zM1 15h14V1H1z"
                  fill="var(--uikit-colors-secondary)"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvCheckBox-label ezlsftu1 HvLabel-root e17iqvr40 HvTypography-root HvTypography-label css-v2gp3a-getStyledComponent-StyledTypography-StyledLabel e1tnpalo0"
            for="hvcheckbox14-input"
            id="hvcheckbox14-label"
          >
            <span
              class="HvTypography-root HvTypography-body css-1fbl1cl-getStyledComponent e1tnpalo0"
            >
              <label
                class="HvTypography-root HvTypography-label css-9vbp9s-getStyledComponent e1tnpalo0"
              >
                All
              </label>
               (8)
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="e1nka4cc1 HvActionsGeneric-root HvBulkActions-actions HvActionsGeneric-actionContainer css-tnxbad-StyledRoot-StyledGenericActions e4fkrgz1"
    >
      <button
        aria-disabled="true"
        class="HvActionsGeneric-button e4fkrgz0 HvButton-root css-rf0utc-StyledButton-StyledButton e138pvrm0"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="css-1nxr552-StyledContentDiv e138pvrm3"
        >
          <span
            class="HvButton-startIcon css-spr17o-StyledIconSpan e138pvrm2"
          >
            <div
              class="css-f95wjz"
              name="Add"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M16 8.5H8.5V16h-1V8.5H0v-1h7.5V0h1v7.5H16z"
                  fill="var(--uikit-colors-secondary)"
                />
              </svg>
            </div>
          </span>
          <span
            class="css-1o4qkkz-StyledChildren e138pvrm1"
          >
            Add
          </span>
        </div>
      </button>
      <button
        aria-disabled="true"
        class="HvActionsGeneric-button e4fkrgz0 HvButton-root css-rf0utc-StyledButton-StyledButton e138pvrm0"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="css-1nxr552-StyledContentDiv e138pvrm3"
        >
          <span
            class="HvButton-startIcon css-spr17o-StyledIconSpan e138pvrm2"
          >
            <div
              class="css-f95wjz"
              name="Delete"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M12 1H4V0h8zm4 1v1h-2.1L13 16H3L2.1 3H0V2zm-3 1H3.1L4 15h8.1z"
                  fill="var(--uikit-colors-secondary)"
                />
              </svg>
            </div>
          </span>
          <span
            class="css-1o4qkkz-StyledChildren e138pvrm1"
          >
            Delete
          </span>
        </div>
      </button>
      <div
        class="HvBaseDropdown-root HvDropDownMenu-root HvActionsGeneric-dropDownMenu css-1u1foky-StyledRoot eapzthe9"
      >
        <div
          aria-expanded="false"
          aria-haspopup="menu"
          class="HvDropDownMenu-container HvBaseDropdown-anchor HvBaseDropdown-rootDisabled css-mq7o8m-StyledAnchor eapzthe8"
          id="dropdown-menu16"
          tabindex="-1"
        >
          <button
            aria-disabled="true"
            aria-expanded="false"
            aria-label="Dropdown menu"
            class="HvDropDownMenu-icon HvActionsGeneric-dropDownMenuButton HvButton-root css-7qkesr-StyledButton e138pvrm0"
            disabled=""
            id="dropdown-menu16-icon-button"
            tabindex="-1"
            type="button"
          >
            <div
              class="css-1nxr552-StyledContentDiv e138pvrm3"
            >
              <span
                class="css-1o4qkkz-StyledChildren e138pvrm1"
              >
                <div
                  class="css-f95wjz"
                  name="MoreOptionsVertical"
                >
                  <svg
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      class="color0"
                      d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                      fill="var(--uikit-colors-secondary_60)"
                    />
                  </svg>
                </div>
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BulkActions > Without actions > should render correctly 1`] = `
<div>
  <div
    class="HvBulkActions-root css-ac2ydt-StyledRoot e1nka4cc3"
  >
    <div
      class="HvBulkActions-selectAllContainer css-1hp2uh2-StyledSelectAllContainer e1nka4cc2"
    >
      <div
        class="HvBulkActions-selectAll HvCheckBox-root css-1lst77x-StyledFormElement ezlsftu3 HvFormElement-root"
      >
        <div
          class="HvCheckBox-container css-13jbcv2-StyledLabelContainer ezlsftu2"
        >
          <span
            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorDefault MuiCheckbox-root MuiCheckbox-colorDefault HvCheckBox-checkbox ezlsftu0 HvBaseCheckBox-root css-1r9xpm8-StyledCheckedBox-StyledBaseCheckBox edk6te40 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              id="hvcheckbox3-input"
              type="checkbox"
              value="on"
            />
            <div
              class="HvBaseCheckBox-icon css-f95wjz"
              font-size="medium"
              name="Checkbox"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 0h16v16H0z"
                  fill="var(--uikit-colors-atmo1)"
                />
                <path
                  class="color1"
                  d="M16 16H0V0h16zM1 15h14V1H1z"
                  fill="var(--uikit-colors-secondary)"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvCheckBox-label ezlsftu1 HvLabel-root e17iqvr40 HvTypography-root HvTypography-label css-v2gp3a-getStyledComponent-StyledTypography-StyledLabel e1tnpalo0"
            for="hvcheckbox3-input"
            id="hvcheckbox3-label"
          >
            <span
              class="HvTypography-root HvTypography-body css-1fbl1cl-getStyledComponent e1tnpalo0"
            >
              <label
                class="HvTypography-root HvTypography-label css-9vbp9s-getStyledComponent e1tnpalo0"
              >
                All
              </label>
               (8)
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="e1nka4cc1 HvActionsGeneric-root HvBulkActions-actions css-14xb33s-StyledRoot-StyledGenericActions e4fkrgz1"
    />
  </div>
</div>
`;
